# spring-2026-final-project-team_07

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  abstract.md  app.py  main.py  pyproject.toml  slides.html
.streamlit/: config.toml
archive/sage/: pyproject.toml
archive/sage/data/sample/: enemies.json
archive/sage/scripts/: check_data.py  check_floor.py  run_demo.py
archive/sage/src/sage/: config.py
archive/sage/src/sage/agents/: narrator.py
archive/sage/src/sage/engine/: loop.py
archive/sage/src/sage/tools/: floors.py
data/: cookbook.db  llm_nutrition.csv  main.ipynb  recipes_enriched.csv  recipes_final.csv  recipes_with_steps.csv  scrape_steps.py  sitemap_urls.json
data/sample/: floors.json  puzzles.json
deliverables/paper/sources/: ai-meal-planners.txt
deliverables/poster/: Sage_Poster.html
deliverables/slides/: slide_deck.html
docs/: index.html  robots.txt  search.json  sitemap.xml
docs/site_libs/bootstrap/: bootstrap-5adc9aae2c4e97fedf6f83068e326513.min.css
evals/: dataset.json  eval.py  eval_metrics.json  seed_eval_users.py
project-docs/: README.md
scripts/: 01-dataload-test.py  02-get-user-profile-test.py  03-macro-targets-test.py  04-day-plan-test.py  05-auditor-test.py  06-intake-agent-test.py  07-planning-agent-test.py  08-audit-agent-test.py  09-orchestrator-test.py  test_narrator.py
site/: .gitignore  _quarto.yml  index.qmd  styles.css
site/.quarto/idx/: index.qmd.json
site/.quarto/project-cache/: deno-kv-file
site/.quarto/xref/: 9e433721  INDEX
src/sage/: loaders.py  schemas.py
(+15 files in other folders)
