[project]
name = "sage"
version = "0.1.0"
description = "Stateful Agent for Game Environments (SAGE) - DSAN 6725 Final Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.82.3",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sage"]

[tool.pytest.ini_options]
pythonpath = ["src"]
